[metadata]
name = gerin
summary = Utility to manage getting changes into multiple git branches and repositories via multiple gerrit instances.
description-file =
    README.rst
author = Steve Baker
author-email = steve@stevebaker.org
home-page = https://github.com/steveb/gerin
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    gerin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
